# ayuna-sysd

./: .gitignore  README.md  docker-compose.yaml  docker-setup.sh  env-gen.py  env_data.yaml.sample  pyproject.toml
conf/: custom-otel-collector.yaml
ocibase/: Dockerfile  build-oci-image
ocibase/scripts/: devkit-setup.sh  funcs.bash
ocibase/scripts/skel/: bashrc
scripts/: connect-aks  gen-nats-secrets  gen-secure-keyref  neo4j-init.sh  s3-init.sh  tunnel-ssm-pgsql
scripts/conf/: connect-aks.env.sample  purge-acr.env.sample  sync-acr2ecr.env.sample  sync-acr2gar.env.sample  tidy-acr.env.sample
scripts/py/: json2b64.py
scripts/sh/: build-oci-image  clean-ebs-volumes  flush-stale-containers  flush-stale-pods  purge-stale-acr-images  setup-helm  sync-acr2ecr  sync-acr2gar  tidy-acr-images
tmpl/: ayuna-sysd.env.j2  nats.conf.j2  otel-collector.yaml.j2  seaweed-s3.json.j2  temporal.env.j2  valkey.conf.j2
