[project]
name = "ayuna-sysd"
description = "System services to run Ayuna applications"
version = "0.1.0"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.34.0,<1.0.0",
    "pylint>=3.2.6,<4.0.0",
    "pyright>=1.1.376,<2.0.0",
    "ruff>=0.8.3,<1.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "djlint>=1.36.4",
]
test = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-dependency>=0.6.1"]

[tool.poe.tasks.clean]
cmd = "find . -type d \\( -name .ruff_cache -o -name __pycache__ -o -name .pytest_cache \\) -exec rm -rf {} +"
help = "Remove ruff, pytest, and Python cache directories - Use 'uv run poe clean' to execute"
